# rav1e

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Frame-Type-Selection.md  Home.md  LICENSE  Quality-&-Speed-Features.md  README.md  Roadmap.md  appveyor.yml  build.rs  build.sh  cbindgen.toml  clippy.toml  license_template.txt  rdo.sh  renovate.json  rustfmt.toml
.clusterfuzzlite/: Dockerfile  build.sh  encode_decode.options  project.yaml
.devcontainer/: Dockerfile  Dockerfile.arm64  build-amd64.json  build-arm64.json  build.json  devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions-rs/: grcov.yml
.github/actions/post_fuzz/: action.yml
.github/actions/pre_fuzz/: action.yml
.github/actions/run_fuzzers/: action.yml  run_fuzzers.Dockerfile
.github/workflows/: clusterfuzzlite.yml  deploy.yml  devcontainer.yml  js_api.yml  rav1e.yml
.travis/: install-aom.sh  install-dav1d.sh  install-kcov.sh  install-nasm.sh  install-sccache.sh
aom_build/: aom_config.h  aom_dsp_rtcd.h  av1_rtcd.h
avformat-sys/: build.rs
avformat-sys/src/: lib.rs
benches/: bench.rs  denoise.rs  dist.rs  mc.rs  me.rs  plane.rs  predict.rs  rdo.rs  transform.rs
benches/comparative/: mod.rs  predict.rs
crates/avformat-sys/: Cargo.toml  LICENSE  build.rs
crates/avformat-sys/data/: av.h
crates/avformat-sys/src/: lib.rs
crates/nasm_rs/: Cargo.toml  README.markdown
crates/nasm_rs/src/: lib.rs
crates/vergen/: .gitignore  Cargo.toml  README.md  build.rs
crates/vergen/scripts/: run-tests.sh
crates/vergen/src/: constants.rs  lib.rs
crates/vergen/src/output/: codegen.rs  envvar.rs  mod.rs
cross/: Dockerfile.libs  entrypoint-build-libs.sh
data/: aom.h
doc/: AOM_ANALYZER.md  CODING_STYLE.md  FRAME_TYPE_SELECTION.md  GLOSSARY.md  PROFILING.md  QUALITY_&_SPEED_FEATURES.md  RDO.md  README.md  STRUCTURE.md  TILE_ON_FRAME_BOUNDARY.md  VERSIONING.md  quantizer-weight-analysis.ipynb  regress_log-bitrate_wrt_log-quantizer.ipynb  structure.drawio
examples/: simple_encoding.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: construct_context.rs  encode.rs  encode_decode.rs  encode_decode_hbd.rs
hooks/: pre-commit
ivf/: CHANGELOG.md  Cargo.toml  LICENSE
ivf/src/: lib.rs
nasm_rs/src/: lib.rs
rav1e_js/: Cargo.toml  README.md
rav1e_js/src/: encoder.rs  encoder_config.rs  frame.rs  lib.rs  packet.rs  utils.rs
rav1e_js/src/encoder/: frame_encoder.rs  mod.rs  video_encoder.rs
rav1e_js/src/frame/: mod.rs
rav1e_js/src/web/: canvas.rs  mod.rs  video.rs
rav1e_js/tests/: node.rs  utils.rs  web.rs
rav1e_js/tools/: rebuild.sh
rav1e_js/www/: .gitignore  bootstrap.js  config-overrides.js  index.html  index.ts  package.json  tsconfig.json  webpack.config.js
rav1e_js/www/public/: index.html
rav1e_js/www/src/: App.tsx  index.ts  main.tsx  utils.ts
rav1e_js/www/src/components/: EncoderConfigDetails.tsx  HelpAndAbout.tsx  index.ts  style.css
src/: activity.rs  aom.rs  aom_config.h  api.rs  capi.rs  cdef.rs  context.rs  cpu_features.rs  deblock.rs  denoise.rs  dist.rs  ec.rs  encoder.rs  entropymode.rs  frame.rs  fuzzing.rs  header.rs  levels.rs  lib.rs  lrf.rs  lrf_simd.rs  main.rs  mc.rs  me.rs  metrics.rs  partition.rs  plane.rs  predict.rs  quantize.rs  rate.rs  rate.rs.rej  rdo.rs  rdo_tables.rs  recon_intra.rs  sad_plane.rs  sad_row.rs  scan_order.rs  segmentation.rs  stats.rs  test_encode_decode.rs  (+6 more)
src/aom/: aom_encoder.h
src/aom_dsp/: .#prob.h  aom_dsp_common.h  intrapred.c  inv_txfm.c  inv_txfm.h  txfm_common.h
src/aom_mem/: aom_mem.c
src/api/: channel.rs  color.rs  config.rs  context.rs  internal.rs  lookahead.rs  mod.rs  test.rs  util.rs
src/api/channel/: by_gop.rs  data.rs  mod.rs
src/api/config/: encoder.rs  grain_synth.rs  mod.rs  progress.rs  rate.rs  speedsettings.rs
src/arm/: asm.S  tables.S
src/arm/32/: cdef.S  ipred.S  ipred16.S  (+9 more)
src/asm/: dist.rs  mc.rs  mod.rs  tables.rs
src/context/: block_unit.rs  cdf_context.rs  frame_header.rs  mod.rs  partition_unit.rs  superblock_unit.rs  transform_unit.rs
src/cpu_features/: aarch64.rs  mod.rs  native.rs  rust.rs  x86.rs
src/decoder/: mod.rs  y4m.rs
src/denoise/: blend.rs  kernel.rs  mod.rs
src/encoder/: block.rs  deblock.rs  frame.rs  headers.rs  mod.rs  motion_comp.rs  partition.rs  reference.rs  segmentation.rs  sequence.rs  tile.rs  transform.rs
src/frame/: mod.rs  plane.rs
src/metrics/: ciede.rs  mod.rs  psnr.rs  psnr_hvs.rs  ssim.rs
src/quantize/: mod.rs  tables.rs
src/scenechange/: fast.rs  mod.rs  standard.rs
src/test_encode_decode/: aom.rs  dav1d.rs  mandelbrotzoom.rs  mod.rs
src/tiling/: mod.rs  plane_region.rs  tile.rs  tile_blocks.rs  tile_motion_stats.rs  tile_motion_vectors.rs  tile_restoration_state.rs  tile_state.rs  tiler.rs
src/transform/: forward.rs  forward_shared.rs  inverse.rs  mod.rs
src/util/: align.rs  array.rs  cdf.rs  dim.rs  kmeans.rs  logexp.rs  mod.rs  pixel.rs  simd.rs  slice2d.rs  uninit.rs
src/x86/: cdef.asm  cdef16_avx2.asm  cdef16_sse.asm  cdef_avx2.asm  cdef_avx512.asm  cdef_dist.asm  cdef_rav1e.asm  cdef_sse.asm  cdef_ssse3.asm  data.asm  film_grain.asm  film_grain16_avx2.asm  film_grain16_sse.asm  film_grain_avx2.asm  film_grain_sse.asm  film_grain_ssse3.asm  filmgrain16_sse.asm  ipred.asm  ipred16_avx2.asm  ipred16_avx512.asm  ipred16_sse.asm  ipred_avx512.asm  ipred_sse.asm  ipred_ssse3.asm  itx.asm  itx16_avx2.asm  itx16_avx512.asm  itx16_sse.asm  itx_avx2.asm  itx_avx512.asm  itx_sse.asm  itx_ssse3.asm  loopfilter.asm  loopfilter16_sse.asm  loopfilter_avx2.asm  loopfilter_ssse3.asm  looprestoration.asm  looprestoration16_avx2.asm  looprestoration16_sse.asm  looprestoration_avx2.asm  (+21 more)
tests/: .gitignore  binary.rs  doctests.rs  small_input.y4m
tools/: bench_build.sh  draw-costs.py  draw-importances.py  draw-mvs.py  pyproject.toml  rdo.sh  submit_awcy.py
tools/process-vstats/: Cargo.toml
tools/process-vstats/src/: main.rs
v_frame/: Cargo.toml
v_frame/src/: frame.rs  lib.rs  math.rs  pixel.rs  plane.rs
(+64 files in other folders)
