[package]
name = "rav1e"
version = "0.8.0"
authors = ["Thomas Daede <tdaede@xiph.org>"]
edition = "2021"
rust-version = "1.83.0"
build = "build.rs"
include = [
  "/Cargo.toml",
  "/LICENSE",
  "/PATENTS",
  "/README.md",
  "/build.rs",
  "/cbindgen.toml",
  "/src/**",
]
license = "BSD-2-Clause"
description = "The fastest and safest AV1 encoder"
readme = "README.md"
repository = "https://github.com/xiph/rav1e/"
autobenches = false
autobins = false
default-run = "rav1e"

[features]
unstable = []
channel-api = ["crossbeam"]
decode_test = ["aom-sys"]
decode_test_dav1d = ["dav1d-sys"]
binaries = [
  "ivf",
  "y4m",
  "clap",
  "clap_complete",
  "scan_fmt",
  "fern",
  "console",
  "av-metrics",
  "nom",
]
default = ["binaries", "asm", "threading", "signal_support", "git_version"]
git_version = ["built/git2"]
asm = ["nasm-rs", "cc"]
threading = ["rayon/threads"]
signal_support = ["signal-hook"]
dump_ivf = ["ivf"]
quick_test = []
desync_finder = ["backtrace"]
bench = []
check_asm = []
capi = ["scan_fmt"]
tracing = [
  "profiling/profile-with-tracing",
  "tracing-subscriber",
  "tracing-chrome",
  "dep:tracing",
]
serialize = [
  "serde",
  "toml",
  "v_frame/serialize",
  "serde-big-array",
  "av1-grain/serialize",
]
wasm = ["wasm-bindgen"]

# Enables debug dumping of lookahead computation results, specifically:
# - i-qres.png: quarter-resolution luma planes,
# - i-hres.png: half-resolution luma planes,
# - i-mvs.bin: motion vectors,
# - i-imps.bin: block importances,
# - i-activity_scales.bin: spatial scales,
# - i-distortion_scales.bin: temporal scales,
# - i-spatiotemporal_scales.bin,
# - i-thresholds.bin: segmentation thresholds.
dump_lookahead_data = ["byteorder", "image"]

[dependencies]
arg_enum_proc_macro = "0.3.4"
av-scenechange = { version = "0.14.1", default-features = false, features = [
  "asm",
] }
bitstream-io = "4.1.0"
cfg-if = "1.0"
clap = { version = "4.5", optional = true, default-features = false, features = [
  "color",
  "std",
  "wrap_help",
  "derive",
] }
clap_complete = { version = "4.5", optional = true }
libc = "0.2"
y4m = { version = "0.8", optional = true }
backtrace = { version = "0.3", optional = true }
num-traits = "0.2"
num-derive = "0.4"
pastey = "0.1.0"
noop_proc_macro = "0.3.0"
serde = { version = "1.0", features = ["derive"], optional = true }
dav1d-sys = { version = "0.7.0", package = "libdav1d-sys", optional = true }
aom-sys = { version = "0.3.3", optional = true }
scan_fmt = { version = "0.2.6", optional = true, default-features = false }
ivf = { version = "0.1", path = "ivf/", optional = true }
v_frame = "0.3.7"
av-metrics = { version = "0.9.1", optional = true, default-features = false }
rayon = { package = "maybe-rayon", version = "0.1", default-features = false }
crossbeam = { version = "0.8", optional = true }
toml = { version = "0.8", optional = true }
arrayvec = "0.7"
thiserror = "2.0"
byteorder = { version = "1.5.0", optional = true }
log = "0.4"
console = { version = "0.15", optional = true }
fern = { version = "0.7", optional = true }
itertools = "0.14"
simd_helpers = "0.1"
wasm-bindgen = { version = "0.2.90", optional = true }
nom = { version = "8.0.0", optional = true }
new_debug_unreachable = "1.0.4"
av1-grain = "0.2.3"
serde-big-array = { version = "0.5.1", optional = true }
profiling = { version = "1" }
tracing-subscriber = { version = "0.3.20", optional = true }
tracing-chrome = { version = "0.7.1", optional = true }
tracing = { version = "0.1.40", optional = true }
aligned-vec = "0.6.0"

[dependencies.image]
version = "0.25.0"
optional = true
default-features = false
features = ["png"]

[build-dependencies]
cc = { version = "1.0", optional = true, features = ["parallel"] }
built = { version = "0.8.0", features = [] }

[build-dependencies.nasm-rs]
version = "0.3"
optional = true
features = ["parallel"]

[target.'cfg(unix)'.dependencies]
signal-hook = { version = "0.3", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
interpolate_name = "0.2.4"
nom = "8.0.0"
quickcheck = "1.0"
rand = "0.9"
rand_chacha = "0.9"
semver = "1.0"

# Exclude dependencies and features that don't work on wasm32:
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
criterion = { version = "0.6", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
assert_cmd = "2.0"
criterion = "0.6"

[target.'cfg(fuzzing)'.dependencies]
arbitrary = "1.3"
interpolate_name = "0.2.4"
libfuzzer-sys = "0.4.7"
rand = "0.9"
rand_chacha = "0.9"

[lints.rust.unexpected_cfgs]
level = "warn"
# These custom cfgs are expected, so tell rustc not to output warnings for them
check-cfg = [
  'cfg(nasm_x86_64)',
  'cfg(asm_neon)',
  'cfg(cargo_c)',
  'cfg(fuzzing)',
]

[[bin]]
name = "rav1e"
required-features = ["binaries"]
bench = false

[[bin]]
name = "rav1e-ch"
required-features = ["binaries", "channel-api", "unstable"]
bench = false

[lib]
bench = false

[[bench]]
name = "bench"
path = "benches/bench.rs"
required-features = ["bench"]
harness = false

[profile.dev]
opt-level = 1

[profile.release]
debug = true
incremental = true
lto = "thin"

[profile.release-no-lto]
inherits = "release"
lto = "off"

[profile.release-strip]
inherits = "release"
strip = "symbols"

[profile.bench]
incremental = true

[workspace]
members = [".", "ivf"]

[package.metadata.docs.rs]
no-default-features = true

[lints.clippy]
doc_link_with_quotes = "warn"
# TODO: Allow for now, since `built` generates code which fails this.
# doc_markdown = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
comparison_chain = "allow"
enum_variant_names = "allow"
needless_range_loop = "allow"
too_many_arguments = "allow"
upper_case_acronyms = "allow"
