[package]
name = "ivf"
version = "0.2.0"
authors = ["Thomas Daede <tdaede@xiph.org>"]
edition = "2021"
description = "Deprecated, use av-ivf crate instead"
license = "BSD-2-Clause"
homepage = "https://crates.io/crates/av-ivf"

[dependencies]
av-ivf = "0.4.1"

[badges]
maintenance = { status = "deprecated" }
