[package]
name = "rav1e_js"
version = "0.1.0"
authors = ["Urhengulas <johann.hemmann@code.berlin>"]
edition = "2018"
description = "JavaScript bindings for rav1e"
repository = "https://github.com/xiph/rav1e/"
license= "BSD-2-Clause"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
rav1e = { path = "..", features = ["serialize", "wasm"] }
serde_json = "1.0.56"
v_frame = { path = "../v_frame/", features = ["wasm"]}
wasm-bindgen = "0.2.63"
web-sys = {version = "0.3", features = ["console"]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
