[package]
name = "rav1e_js"
version = "0.2.0"
authors = ["Urhengulas <johann.hemmann@code.berlin>"]
edition = "2018"
description = "JavaScript bindings for rav1e"
repository = "https://github.com/xiph/rav1e/"
license= "BSD-2-Clause"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
dcv-color-primitives = "0.1"
rav1e = { path = "..", features = ["serialize", "wasm"] }
serde_json = "1.0"
v_frame = { path = "../v_frame/", features = ["wasm"]}
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "console",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "HtmlVideoElement",
    "ImageData",
    "Window"
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-mutable-globals"]
