[package]
name = "v_frame"
version = "0.2.5"
description = "Video Frame data structures, part of rav1e"
license = "BSD-2-Clause"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
edition = "2021"
repository = "https://github.com/xiph/rav1e/"

[features]
serialize = ["serde"]
wasm = ["wasm-bindgen"]
tracing = ["rust_hawktracer/profiling_enabled"]

[dependencies]
rayon = "1.0"
cfg-if = "1.0"
num-traits = "0.2"
num-derive = "0.3"
noop_proc_macro = "0.3.0"
serde = { version = "1.0", features = ["derive"], optional = true }
wasm-bindgen = { version = "0.2.63", optional = true }
rust_hawktracer = "0.7.0"
new_debug_unreachable = "1.0.4"
