[package]
name = "avformat-sys"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "FFI bindings to ffmpeg"
edition = "2018"
build = "build.rs"

[package.metadata.pkg-config]
libavformat = "58.18.102"
libavcodec = "58.0.0"
libavutil = "56.0.0"

[features]
build_sources = []

[build-dependencies]
bindgen = "0.51"
metadeps = "1.1.2"

[dependencies]
