[package]
authors = [
    "Allen Goodman <allen@goodman.io>",
    "Gavin Massey <mdk@mystacktrace.org>",
    "Jerome Rasky <jyrome.112@gmail.com>",
    "Justinas Stankevičius <justinas@users.noreply.github.com>",
    "Kornel Lesinski <kornel@geekhood.net>",
]
description = "Run NASM during your Cargo build."
homepage = "https://github.com/medek/nasm-rs"
keywords = ["assembler", "assembly", "build-dependencies", "cargo", "nasm"]
license = "MIT OR Apache-2.0"
name = "nasm-rs"
readme = "README.markdown"
repository = "https://github.com/medek/nasm-rs"
version = "0.1.3"

[dependencies.rayon]
optional = true
version = "1.0"

[features]
parallel = ["rayon"]
