[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
description = "Generate version related functions"
documentation = "http://docs.rs/vergen"
edition = "2018"
homepage = "http://github.com/rustyhorde/vergen"
keywords = ["version", "generation"]
license = "MIT/Apache-2.0"
name = "vergen"
readme = "README.md"
repository = "https://github.com/rustyhorde/vergen"
version = "3.0.4"

[dependencies]
bitflags = "1"
chrono = "0"

[dev-dependencies]
lazy_static = "1"
regex = "1"

[build-dependencies]
chrono = "0"
