[package]
name = "process-vstats"
version = "0.1.0"
authors = ["yalter"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.1"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
clap = { version = "3.0.0-beta.1", default_features = false, features = ["std", "cargo"] }
rayon = "1.3.1"
